src/test/ui/type-alias-impl-trait/issue-53678-generator-and-const-fn.min_tait.stderr
error[E0658]: type alias impl trait is not permitted here
  --> $DIR/issue-53678-generator-and-const-fn.rs:20:36
   |
LL | const FOO: GenOnce<usize, usize> = const_generator(10, 100);
   |                                    ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #63065 <https://github.com/rust-lang/rust/issues/63065> for more information
   = help: add `#![feature(impl_trait_in_bindings)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
